Wed Dec 31 17:06:55 CET 2003  Jochen Eisinger <jochen@penguin-breeder.org>

	* Don't use silc_get_input, it's obviously not reliable.  Fixes
	  issue when the current key expires.  Affect file
	  irssi/src/silc/core/clientutils.c

	* Make the session data filename configurable.  This makes it
	  possible to have different session files for different
	  SILC networks.  Affected files irssi/src/silc/core/silc-core.c,
	  client_ops.[ch], silc-servers.c, 
	  irssi/src/silc/fe-common/silc/module-formats.[ch]

	* Use the same set of libtool files for the MPI lib as for the
	  rest of the toolkit.  Affected files lib/silcmath/mpi/config.guess,
	  config.sub, configure.in, install-sh, missing, mkinstalldirs

Sun Dec 28 21:57:39 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Fixed server statistics decrementing error to not go to
	  negative.  Affected file silcd/packet_receive.c.

Sat Dec 20 14:42:36 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Use silc_server_query_add_error to add error in public key
	  search error.  Added support in send_reply to send errors
	  without specific argument.  Affected file silcd/server_query.c.

	* Fixed the WHOIS, IDENTIFY and WHOWAS error handling in SILC 
	  Client for NO_SUCH_NICK.  It was against the protocol specs.
	  Affected file irssi/src/silc/core/client_ops.c.

	* Added backwards support for the wrong NO_SUCH_NICK error sending
	  in server.  To be removed in SILC Server 1.0.  Both old clients
	  and clients with fixed error handling now works.  Affected file
	  silcd/server_query.c.

Sat Dec 20 00:44:47 CET 2003  Patrik Weiskircher <pat@icore.at>

	* fixed a bug in the whois using attributes function where no 
	  error was sent if no nickname and client id but the attributes were
	  given to whois. Affected file silcd/server_query.c

Tue Dec 16 21:34:59 CET 2003  Patrik Weiskircher <pat@icore.at>

	* remove public key from public key hashtable on detach. Affected
	  file silcd/packet_receive.c
